k8s/07-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neutweather-app
  namespace: neutweather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: neutweather-app

  template:
    metadata:
      labels:
        app: neutweather-app

    spec:
      containers:
        - name: neutweather-app
          image: lordneutroon/weather-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
              name: http

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
