k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: neutweather

spec:
    type: ClusterIP
    selector:
      app: postgres
    ports:
      - name: postgres
        port: 5432
        targetPort: 5432
