k8s/06-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: neutweather
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
