k8s/08-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neutweather-service
  namespace: neutweather
spec:
  type: ClusterIP
  selector:
    app: neutweather-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
